test/1.2/errors/T_EARGT.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

import "simics/devs/interrupt.dml";

implement simple_interrupt {
    /// ERROR EARGT
    method interrupt(void *level) {}
    method interrupt_clear(int i) {}
}

method m(bool b) -> (int i) {
}

method init {
    local int i;
    local bool b;
    /// ERROR EARGT
    inline $m(i) -> (i);
    /// ERROR EARGT
    inline $m(b) -> (b);
}
